Fix #7815 - Note field in Contacts was misaligned if there is a longer note (#7825)
* Fix #7815 - update sizes of elements

Context: `.contactViewDetail-icon` and `contactViewDetail-type` are flex elements.
- `min-width` for `.contactViewDetail-icon` will avoid it shrinking below 50px (IE11, f***)
- `width` will be ignored for `.contactViewDetail-type`, so set it up using `flex-basis`

* Fix #7815 - update sizes of elements 

[class*="contactViewItem-value"] items are now fully flexible.

--- a/src/sass/components/contact/contactViewDetail.scss
+++ b/src/sass/components/contact/contactViewDetail.scss
@@ -51,13 +51,13 @@
 .contactViewDetail-item[data-type="fn"] + [data-type="fn"] { display: none }
 
 .contactViewDetail-icon {
-    width: 50px;
+    min-width: 50px;
     text-align: center;
 }
 
 .contactViewDetail-type {
-    width: 20%;
-    max-width: 250px
+    flex: 0 0 20%;
+    max-width: 250px;
 }
 
 .contactViewDetail-item:not(.contactViewDetail-item-start) {
